corrected navbar z-index

--- a/src/components/nav/Navbar.css
+++ b/src/components/nav/Navbar.css
@@ -5,7 +5,7 @@
   align-items: center;
   position: sticky;
   top: 0;
-  z-index: 999;
+  z-index: 29999;
   background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
   font-size: 1.2rem;
   font-weight: 700;
